--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -2301,8 +2301,8 @@ section {
 
 @media (max-width: 991px) {
     .header-desktop2 {
-        left: 0;
-        position: relative;
+        /*left: 0;*/
+        /*position: relative;*/
     }
 }
 
@@ -2366,7 +2366,7 @@ section {
     top: 52px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 991px ){
     .header-button2 .header-button-item .search-dropdown {
         top: 63px;
         right: -75px;
@@ -2376,7 +2376,6 @@ section {
         -o-transform-origin: 70% top;
         transform-origin: 70% top;
     }
-
     .header-button2 .header-button-item .search-dropdown::before {
         right: 79px;
     }
@@ -14653,7 +14652,14 @@ section {
     border-radius: 10px;
     text-align: center;
     cursor:pointer;
-    
+    color:#ffffff;
+}
+.compCard .card{
+    height: 150px;
+    border-radius: 10px;
+    text-align: center;
+    cursor:pointer;
+    color:#ffffff;
 }
 .bg-blue{
     background-color: darkblue;
@@ -14663,3 +14669,458 @@ section {
     color:red;
     /*font-size: 10px;*/
 }
+/*.formsCard .card {*/
+/*    -webkit-border-radius: 3px;*/
+/*    -moz-border-radius: 3px;*/
+/*    border-radius: 63px;*/
+/*}*/
+/*exceptional css*/
+.hd div
+{
+    width:130px;
+    height:130px;
+    border-radius: 40%;
+    z-index:120;
+}
+.hd h1
+{
+    font-family: 'Raleway', sans-serif;
+    position: fixed;
+    left:30%;
+
+}
+.hd .hot
+{ position: absolute;
+    top:25%;
+    left:20%;
+    background:linear-gradient( to top right, rgba(255,87,34,1) 0%,
+    rgba(251,140,0 ,1) 100%);
+    box-shadow: 1px 1px 30px rgba(255,111,0 ,1);
+}
+.hd .sun
+{
+    position: absolute;
+    top:-10%;
+    left:65%;
+    width:50px;
+    height: 50px;
+    border-radius: 100%;
+    background:linear-gradient( to bottom left, rgba(255,235,59,1) 0%,
+    rgba(249,168,37 ,1) 90%);
+    box-shadow: 1px 1px 30px rgba(255,160,0 ,1);
+    animation: inex 3s infinite linear ;
+
+}
+
+.hd .sunx
+{
+    position: absolute;
+    top:30%;
+    left:45%;
+    width:10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: #fff;
+    opacity:0.2;
+}
+.hd .cloudy
+{ position: absolute;
+    top:25%;
+    left:45%;
+    background:linear-gradient( to top right, rgba(63,81,181,1) 0%,
+    rgba(3,155,229 ,1) 40%);
+    box-shadow: 1px 1px 30px rgba(2,119,189 ,1);
+
+}
+.hd .cloud
+{
+    position: absolute;
+    top:5%;
+    left:70%;
+    width:60px;
+    height: 20px;
+    border-radius:10px;
+    background-color: rgba(129,212,250 ,1);
+    box-shadow: 1px 1px 30px rgba(0,151,167 ,1);
+    animation: move 3s infinite linear ;
+
+}
+.hd .cloudx
+{
+    position: absolute;
+    top:23%;
+    left:55%;
+    width:60px;
+    height: 20px;
+    border-radius:10px;
+    background-color: rgba(129,212,250 ,1);
+    animation: move 3s infinite linear ;
+
+}
+.hd .stormy
+{
+    position: absolute;
+    top:25%;
+    left:70%;
+    background:linear-gradient( to top right,rgba(117,117,117 ,1) 0%,
+    rgba(33,33,33 ,1) 90%);
+    box-shadow: 1px 1px 30px rgba(33,33,33 ,1);
+}
+.hd .stormy li
+{
+    position: absolute;
+    list-style: none;
+    width: 5px;
+    height: 5px;
+    border-radius: 100%;
+    background-color:#777;
+    box-shadow: 1px 1px 30px #555;
+    animation: fall 3s infinite linear ;
+    opacity:0;
+}
+.hd .stormy li:nth-child(1)
+{
+
+    top:0%;
+    left:100%;
+}
+
+.hd .stormy li:nth-child(2)
+{
+    top:5%;
+    left:90%;
+}
+
+.hd .stormy li:nth-child(3)
+{
+    top:-10%;
+    left:80%;
+    animation-delay: 2s;
+}
+
+.hd .stormy li:nth-child(4)
+{
+    top:10%;
+    left:100%;
+    animation-delay: 2s;
+}
+
+.hd .stormy li:nth-child(5)
+{
+    top:20%;
+    left:80%;
+    animation-delay: 0.5s;
+}
+
+.hd .stormy li:nth-child(6)
+{
+    top:35%;
+    left:70%;
+    background-color: #bbb;
+    animation-delay: 0.5s;
+}
+
+
+.hd .stormy li:nth-child(7)
+{
+    top:23%;
+    left:60%;
+    background-color: #bbb;
+    animation-delay: 0.8s;
+}
+
+.hd .stormy li:nth-child(8)
+{
+    top:5%;
+    left:70%;
+    background-color: #bbb;
+    animation-delay: 0.8s;
+}
+.hd .snowe
+{
+    position: absolute;
+    top:60%;
+    left:40%;
+    width:40px;
+    height: 40px;
+    border-radius:60px;
+    background-color: #ddd;
+
+
+}
+.hd .snowex
+{
+    position: absolute;
+    top:50%;
+    left:50%;
+    width:15px;
+    height: 15px;
+    border-radius:15px;
+    background-color: #bbb;
+
+}
+.hd .stick
+{
+    position: absolute;
+    top:60%;
+    left:40%;
+    width:3px;
+    height: 15px;
+    transform: rotate(-45deg);
+    background-color: #333;
+    z-index: -10;
+}
+.hd .stick2
+{
+    position: absolute;
+    top:60%;
+    left:70%;
+    width:3px;
+    height: 15px;
+    transform: rotate(45deg);
+    background-color: #333;
+    z-index: -10;
+}
+.hd .breezy
+{
+    position: absolute;
+    top:60%;
+    left:30%;
+    background:linear-gradient( to top right,rgba(156,204,101 ,1) 0%,
+    rgba(38,198,218 ,1) 50%);
+    box-shadow: 1px 1px 30px rgba(38,198,218 ,1);
+
+}
+.hd .cloudr
+{
+    position: absolute;
+    top:5%;
+    left:60%;
+    width:60px;
+    height: 20px;
+    border-radius:10px;
+    background-color: rgba(96,125,139 ,1);
+    box-shadow: 1px 1px 30px rgba(84,110,122 ,1);
+    animation: flash 1.5s infinite linear;
+
+}
+
+.hd .breezy li
+{
+    position: absolute;
+    list-style: none;
+    width: 2px;
+    height: 7px;
+    border-radius: 10%;
+    background-color:#eee;
+    opacity:0;
+    animation: fall 3s infinite linear ;
+    transform: rotate(25deg);
+}
+.hd .breezy li:nth-child(1)
+{
+
+    top:10%;
+    left:95%;
+}
+
+.hd .breezy li:nth-child(2)
+{
+    top:5%;
+    left:83%;
+    animation-delay:0.3s;
+}
+
+.hd .breezy li:nth-child(3)
+{
+    top:4%;
+    left:87%;
+    animation-delay:0.6s;
+}
+
+.hd .breezy li:nth-child(4)
+{
+    top:15%;
+    left:70%;
+    animation-delay:1s;
+}
+
+.hd .breezy li:nth-child(5)
+{
+    top:10%;
+    left:75%;
+}
+
+.hd .night
+{
+    position: absolute;
+    top:60%;
+    left:60%;
+    background:linear-gradient( to bottom right,rgba(63,81,181,1) 0%,
+    rgba(171,71,188 ,1) 70%);
+    box-shadow: 1px 1px 30px rgba(81,45,168 ,1);
+
+}
+.hd .moon
+{
+    position: absolute;
+    top:-10%;
+    left:65%;
+    width:70px;
+    height: 70px;
+    border-radius: 100%;
+    background:rgba(255,241,118 ,1);
+    box-shadow: 1px 1px 30px rgba(224,224,224 ,1);
+}
+.hd .spot1
+{
+    position: absolute;
+    top:0%;
+    left:85%;
+    width:10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: #777;
+}
+.hd .spot2
+{
+    position: absolute;
+    top:30%;
+    left:75%;
+    width:5px;
+    height: 5px;
+    border-radius: 100%;
+    background-color: #777;
+}
+
+.hd .night li
+{
+    position: absolute;
+    list-style: none;
+    width: 3px;
+    height: 3px;
+    border-radius: 100%;
+    background-color:#fff;
+
+
+    transform: rotate(45deg);
+}
+.hd .night li:nth-child(1)
+{
+
+    top:30%;
+    left:65%;
+}
+
+.hd .night li:nth-child(2)
+{
+    top:35%;
+    left:53%;
+}
+
+.hd .night li:nth-child(3)
+{
+
+    opacity: 0;
+    top:20%;
+    left:75%;
+    width:2px;
+    height: 2px;
+    animation: meteor 1.5s infinite linear;
+    animation-delay: 0.6s;
+
+}
+
+.hd .night li:nth-child(4)
+{
+    top:5%;
+    left:50%;
+}
+
+.hd .night li:nth-child(5)
+{
+    opacity: 0;
+    top:20%;
+    left:55%;
+    width:1px;
+    height: 15px;
+    animation: meteor 1.5s infinite linear;
+}
+
+@keyframes inex {
+
+
+    50% {
+        opacity: 0.4;
+
+    }
+    60%
+    {
+        opacity: 1;
+    }
+}
+@keyframes move {
+
+
+    50% {
+        transform: translateX(-10px);
+
+    }
+}
+@keyframes fall {
+    10%
+    {
+        opacity:0.8;
+    }
+
+    50% {
+        opacity:1;
+        transform: translate(-10px,30px);
+
+    }
+    100%
+    {
+        transform: translate(-25px,70px);
+
+
+    }
+}
+@keyframes flash
+{
+    48%
+    {
+        background-color: rgba(96,125,139 ,1);
+    }
+    50%
+    {
+        background-color: #fff;
+    }
+    55%
+    {
+        background-color: rgba(96,125,139 ,1);
+    }
+    57%
+    {
+        background-color: #fff;
+    }
+}
+@keyframes meteor
+{
+
+    10%
+    {opacity: 1;
+    }
+    80%
+    {
+        left:10%;
+        top:75%;
+        opacity: 0;
+    }
+}
+label{
+    color:red;
+}
+::placeholder {
+  color:green;
+}
+
