--- a/assets/csss/custom.css
+++ b/assets/csss/custom.css
@@ -1577,15 +1577,15 @@ section {
     vertical-align: middle;
 }
 
-.menu-sidebar {
-    width: 250px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    background: #fff;
-    overflow-y: auto;
-}
+/*.menu-sidebar {*/
+/*    width: 250px;*/
+/*    position: fixed;*/
+/*    left: 0;*/
+/*    top: 0;*/
+/*    bottom: 0;*/
+/*    background: #fff;*/
+/*    overflow-y: auto;*/
+/*}*/
 
 .menu-sidebar .logo {
     background: #f5f5f5;
