--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -15965,4 +15965,8 @@ ul.github-buttons li {
 .form-fa-item .fa{
     color:#ffffff;
 }
+.editBtn{
+    border:1px solid cornflowerblue;
+    padding: 2px 15px;
+}
 
